--- a/website-style/index.html
+++ b/website-style/index.html
@@ -16,12 +16,12 @@
 
 <body>
 
-  <h1>Project Title</h1>
+  <h1>Subtractive variability</h1>
 
   <!-- the following div will contain the p5 canvas. -->
   <div id="canvasContainer"></div>
 
-  <p>Project Description</p>
+  <p>In order to create a variety of colors using the "Map" and "Trigonometry" functions on P5.js, I first made the variables for each color and angle by stating the color in the setup function according to sin Value, and amp. Also, I made some mistakes because I did not declare the sinValue and the variable in the first place. Then I corrected my error and displayed the function . In brief, I found the process of drawing sinValue to be somewhat tricky. </p>
 
   <!-- the script tag below should always be at the bottom, right before the closing body tag -->
   <script src="sketch.js"></script>
