--- a/final-project/second.html
+++ b/final-project/second.html
@@ -4,22 +4,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <div id="canvasContainer"></div>
   <title>CCLab Final Project</title>
 
   <link rel="stylesheet" type="text/css" href="second-style.css">
-
+  <script src="libraries/p5.min.js"></script>
 </head>
 
 <body>
-
-  <h1>The Maze</h1>
+  
+<div>
+<h1>The Maze</h1>
 <p>Please choose the mode to start</p>
-
 <a href="first.html"><h2> Easy Mode</h2></a> 
 <a href="first2.html"><h3> Medium Mode</h3></a> 
 <a href="first3.html"><h4> Difficult Mode</h4></a> 
-
+</div>
+<script src="mainscreen.js"></script>
 </body>
 
 </html>
