--- a/final-project/second.html
+++ b/final-project/second.html
@@ -19,7 +19,7 @@
 <a href="first2.html"><h3> Medium Mode</h3></a> 
 <a href="first3.html"><h4> Difficult Mode</h4></a> 
 </div>
-<script src="mainscreen.js"></script>
+<!-- <script src="mainscreen.js"></script> -->
 </body>
 
 </html>
