--- a/final-project/first2.html
+++ b/final-project/first2.html
@@ -18,7 +18,13 @@
   <h1>The Maze</h1>
   <a href="second.html"><h2>Back to the menu</h2></a> 
   <div id="canvasContainer"></div>
-  <script src="sketch.js"></script>
+  <body>
+    <span class="hovertext" data-hover="Instructions: You can move the ball using the arrow keys to go to the finishing point. If you touch the edge of the line, you will start from the starting point again. When you reach the finishing point, you will be asked to move to the next round to restart the game again. 
+    ">
+      Game Instructions
+    </span>
+  </body>
+  <script src="medium.js"></script>
 </body>
 
 </html>
