--- a/final-project/second.html
+++ b/final-project/second.html
@@ -4,20 +4,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <div id="canvasContainer"></div>
-  <title>CCLab Final Project</title>
 
+  <title>CCLab Final Project</title>
   <link rel="stylesheet" type="text/css" href="second-style.css">
   <script src="libraries/p5.min.js"></script>
 </head>
 
 <body>
-<div>
-<h1>The Maze</h1>
+
+
+
+<h1 title="By Ganaa">The Maze</h1>
 <p>Please choose the mode to start</p>
-<a href="first.html"><h2> Easy Mode</h2></a> 
-<a href="first2.html"><h3> Medium Mode</h3></a> 
-<a href="first3.html"><h4> Difficult Mode</h4></a> 
+<img src="maze.png" width="130px" heigh="100px">
+<div class="Row">
+<div class="Column"><a href="first.html"><h2 title="Click to choose Easy Mode"> Easy Mode</h2></a> </div>
+<div class="Column"><a href="first2.html"><h3 title="Click to choose Medium Mode"> Medium Mode</h3></a> </div>
+<div class="Column"><a href="first3.html"><h4 title="Click to choose Difficult Mode"> Difficult Mode</h4></a> </div>
 </div>
 <!-- <script src="mainscreen.js"></script> -->
 </body>
